--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,12 @@
-// TODO
+.container {
+  max-width: 1120px;
+  height: 5rem;
+  margin: 0 auto;
+  padding: 0 15rem;
+
+  h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 5rem;
+  }
+}
