--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,12 +1,54 @@
 .container {
   max-width: 1120px;
-  height: 5rem;
   margin: 0 auto;
-  padding: 0 15rem;
+  padding: 0 2rem;
+}
 
-  h1 {
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 5rem;
+.posts {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 2.5rem 0;
+
+  a {
+    display: block;
+
+    & + a {
+      margin-top: 2rem;
+      padding-top: 2rem;
+    }
+
+    h1 {
+      display: block;
+      font-size: 1.75rem;
+      line-height: 2rem;
+      transition: color 0.2s;
+    }
+
+    p {
+      color: var(--gray-100);
+      margin-top: 0.5rem;
+      line-height: 1.625rem;
+    }
+
+    div {
+      margin-top: 1.5rem;
+
+      time {
+        font-size: 1rem;
+        color: var(--gray-500);
+        margin: 0 1rem;
+      }
+
+      span {
+        color: var(--gray-500);
+        margin: 0 1rem;
+      }
+
+    }
+
+
+    &:hover h1 {
+      color: var(--pink-500);
+    }
   }
 }
