check slugs and add link into Header

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,4 +7,10 @@
   height: 5rem;
   margin: 5rem auto;
   padding: 0 15rem;
+  cursor: pointer;
+  transition: filter 0.2s;
+
+  &:hover img {
+    filter: brightness(0.9);
+  }
 }
