--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,28 @@
-// TODO
+.banner {
+  margin-bottom: 5rem;
+  margin-top: 2.5rem;
+}
+
+.title {
+  margin: 1rem 0;
+}
+
+.info {
+  margin: 1rem 0 4rem;
+
+  time {
+    margin: 0 1rem;
+  }
+
+  span {
+    margin: 0 1rem;
+  }
+}
+
+.content {
+  margin-bottom: 3rem;
+
+  h2 {
+    margin-bottom: 1rem;
+  }
+}
