--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -9,11 +9,6 @@
   margin: 0 auto;
   padding: 0 2.5rem 0;
 
-  img {
-    width: 100%;
-    height: 0.5rem;
-  }
-
   a {
     display: block;
 
@@ -27,6 +22,7 @@
       font-size: 1.75rem;
       line-height: 2rem;
       transition: color 0.2s;
+      margin-bottom: 1rem;
     }
 
     p {
